Changed the links, which pointed to the t-square materials, to point to the current repo materials.

--- a/README.org
+++ b/README.org
@@ -11,9 +11,12 @@
   The end goal of this project is to write a preemptive user-level threads library with mutex exclusion.  Along the way, you will become familiar with the pthreads library and solve the classic mutual exclusion puzzle of “The Dining Philosophers”.
 
 ** Setup
-   1. Gain access to a well-maintained linux machine.  If you do not have this already, then it is recommended that you follow the README[instructions](/wiki/ud156_virtualbox) for downloading and installing VirtualBox and the AOS Virtual Image. 
+   1. Gain access to a well-maintained linux machine.  If you do not have this already, then it is recommended that you follow the [[https://www.udacity.com/wiki/ud156-virtualbox][instructions]] for downloading and installing VirtualBox and the AOS Virtual Image. 
       
-   2. Download [gtthreads.tar.gz](https://t-square.gatech.edu/access/content/group/gtc-6986-478d-546f-8ee0-ed0661a439c3/gtthreads.tar.gz), which contains the starter code for the project.
+   2. Clone this repository, which contains the starter code for the project.
+      #+BEGIN_SRC sh
+        git clone git@github.gatech.edu:sb300/oms-aos-gtthreads.git
+      #+END_SRC
       
    3. You can confirm that you have pthreads installed on your linux platform with the command
 
@@ -29,7 +32,7 @@
 -----
 
 ** Warm-up
-   To familiarize yourself with the pthreads library, you will debug a simple test program named producer_consumer.c.  You may read about the [pthread api](https://computing.llnl.gov/tutorials/pthreads/) or consult the man pages on your virtual platform.  For example, to learn about pthread_join, type
+   To familiarize yourself with the pthreads library, you will debug a simple test program named producer_consumer.c.  You may read about the [[https://computing.llnl.gov/tutorials/pthreads/][pthread api]] or consult the man pages on your virtual platform.  For example, to learn about pthread_join, type
 
    #+BEGIN_SRC sh
     man pthread_join 
@@ -57,13 +60,14 @@
    
 ** GTthreads
 
-   The main part of the project is to implement a user-level thread library with an api similar to POSIX threads or pthreads.  The specifications for implementing this api are found in the two files [gtthread_sched.c](https://t-square.gatech.edu/access/content/group/gtc-6986-478d-546f-8ee0-ed0661a439c3/gtthreads/gtthread_sched.c) and [gtthread_mutex.c](https://t-square.gatech.edu/access/content/group/gtc-6986-478d-546f-8ee0-ed0661a439c3/gtthreads/gtthread_mutex.c).
+   The main part of the project is to implement a user-level thread library with an api similar to POSIX threads or pthreads.  The specifications for implementing this api are found in the two files 
+[[https://github.gatech.edu/sb300/oms-aos-gtthreads/blob/master/gtthread_sched.c][gtthread_sched.c]] and [[https://github.gatech.edu/sb300/oms-aos-gtthreads/blob/master/gtthread_mutex.c][gtthread_mutex.c]]
 
    The following strategies are highly recommended:
 
    * Use the provided steque data structure (in files steque.[ch]) for both your scheduling queue and your mutex locks.
-   * Use swapcontext, makecontext, and getcontext functions, which are illustrated in the example program [tennis.c](https://t-square.gatech.edu/access/content/group/gtc-6986-478d-546f-8ee0-ed0661a439c3/gtthreads/tennis.c), to switch among your threads.
-   * Use setitimer, sigaction, sigprocmask, and related functions, which are illustrated in the example program [defcon.c](https://t-square.gatech.edu/access/content/group/gtc-6986-478d-546f-8ee0-ed0661a439c3/gtthreads/defcon.c), to achieve pre-emption among your threads.  Consult this [post](http://www.linuxprogrammingblog.com/all-about-linux-signals?page=show) and the [wikipedia article](http://en.wikipedia.org/wiki/Unix_signal) for more information. 
+   * Use swapcontext, makecontext, and getcontext functions, which are illustrated in the example program [[https://github.gatech.edu/sb300/oms-aos-gtthreads/blob/master/tennis.c][tennis.c]], to switch among your threads.
+   * Use setitimer, sigaction, sigprocmask, and related functions, which are illustrated in the example program [[https://github.gatech.edu/sb300/oms-aos-gtthreads/blob/master/defcon.c][defcon.c]], to achieve pre-emption among your threads.  Consult this [[http://www.linuxprogrammingblog.com/all-about-linux-signals?page=show][post]] and the [[http://en.wikipedia.org/wiki/Unix_signal][wikipedia article]] for more information. 
      
    It is also suggested that you work incrementally.  For instance, you might the task into the following pieces:
 
