--- a/README.org
+++ b/README.org
@@ -16,7 +16,7 @@
       
     2. Clone this repository, which contains the starter code for the project.
        #+BEGIN_SRC sh
-        git clone git@github.gatech.edu:sb300/oms-aos-gtthreads.git
+         git clone https://github.gatech.edu/sb300/oms-aos-gtthreads.git
        #+END_SRC
       
     3. You can confirm that you have pthreads installed on your linux platform with the command
